--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -52,6 +52,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/image_view_map"
         android:clickable="true"
+        android:focusable="true"
         android:onClick="createPhoneIntent"
         />
 
